syntax = "proto3";

package server.shared;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Pager {
  optional uint32 CurrentPage = 1;
  optional uint32 PerPage = 2;
}

message PageResponse {
  uint32 TotalCount = 1;
  uint32 TotalPage = 2;
  uint32 CurrentPage = 3;
  uint32 PerPage = 4;
}
